--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 /* Base Styles Start */
 body {
-    background-color: #1f1f1f;
     color: #dbc3bb;
     font-family: verdana, sans-serif;
 }
@@ -25,21 +24,25 @@ blockquote {
 /* Base Styles End */
 
 /* Header Start */
-div.head {
-    height: 50px;
+iframe.header {
+    height: 70px;
     width: 100%;
     top: 0;
     left: 0;
     padding-left: 10px;
     background-color: #070700;
     position: fixed;
-    z-index: 2;
+    border: none;
+}
+
+div.head {
+    background-color: #070700;
 }
 /* Header End */
 
 /* Sidebar Navigation Start */
-div.sidenav {
-    top: 50px;
+iframe.sidenav {
+    top: 70px;
     left: 0;
     bottom: 0;
     width: 360px;
@@ -47,12 +50,14 @@ div.sidenav {
     position: fixed;
     overflow-x: hidden;
     overflow-y: auto;
-    z-index: 1;
-    padding-top: 10px;
+    border: none;
+    background-color: #0f0b07;
     padding-left: 10px;
     padding-bottom: 10px;
+}
+
+div.sidenav {
     background-color: #0f0b07;
-    
 }
 
 h3.sidenav {
@@ -79,8 +84,19 @@ p.sidenav2 {
 /* Sidebar Navigation End */
 
 /* Main Body Start */
-.main {
-    margin-top: 50px;
-    margin-left: 380px;
+iframe.main {
+    top: 70px;
+    left: 360px;
+    bottom: 0;
+    right: 0;
+    width: calc(100% - 380px);
+    height: calc(100% - 70px);
+    position: fixed;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #1f1f1f;
+    border: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 /* Main Body End */
