--- a/FuncGodot Manual/styles.css
+++ b/FuncGodot Manual/styles.css
@@ -27,6 +27,23 @@ blockquote {
     background-color: #0f0b07;
 }
 
+table {
+    border-collapse: collapse;
+    background-color: #1f1f1f;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+tr.header {
+    background-color: #070700;
+}
+
+td {
+    border-style: solid;
+    border-width: 2px;
+    padding: 10px;
+}
+
 /* Base Styles End */
 
 /* Header Start */
