--- a/FuncGodot Manual/styles.css
+++ b/FuncGodot Manual/styles.css
@@ -30,8 +30,13 @@ blockquote {
 table {
     border-collapse: collapse;
     background-color: #1f1f1f;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+
+table.props {
+    margin-left: 0;
 }
 
 tr {
