--- a/FuncGodot Manual/styles.css
+++ b/FuncGodot Manual/styles.css
@@ -23,8 +23,19 @@ a:active {
     color: #e7ab5f;
 }
 
+pre {
+    background-color: #0f0b07;
+    padding: 10px;
+}
+
+code {
+    background-color: #0f0b07;
+    padding: 5px;
+}
+
 blockquote {
     background-color: #0f0b07;
+    padding: 10px;
 }
 
 table {
@@ -51,6 +62,12 @@ td {
     border-style: solid;
     border-width: 2px;
     padding: 10px;
+}
+
+b.faq {
+    color:#b7876b;
+    font-weight: 600;
+    font-style: italic;
 }
 
 /* Base Styles End */
