--- a/FuncGodot Manual/pages/styles.css
+++ b/FuncGodot Manual/pages/styles.css
@@ -63,7 +63,9 @@ tr {
 }
 
 tr.header {
-    background-color: #070700;
+    background-color: #000000;
+    font-style: italic;
+    font-weight: 600;
 }
 
 td {
@@ -101,7 +103,7 @@ iframe.header {
     border: none;
 }
 
-div.head {
+body.header {
     background-color: #070700;
 }
 /* Header End */
@@ -122,7 +124,7 @@ iframe.sidenav {
     padding-bottom: 10px;
 }
 
-div.sidenav {
+body.sidenav {
     background-color: #0f0b07;
 }
 
@@ -164,5 +166,9 @@ iframe.main {
     border: none;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+body.main {
+    background-color: #1f1f1f;
 }
 /* Main Body End */
